Adicionado tela inicial

--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.dom.min.js></script>
     <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.sound.min.js></script>    
     <script defer src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
-    <script src="./scripts/sketch.js"></script>
+    
+
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+  </head>
+  <body>
+
+    <script src="./scripts/variaveis.js"></script>
+    <script src="./scripts/load.js"></script>
+    <script src="./scripts/cenas/jogo.js"></script>
+    <script src="./scripts/jogo/telaInicial.js"></script>
+    <script src="./scripts/cenas/botaoGerenciador.js"></script>
     <script src="./scripts/jogo/animacao.js"></script>
     <script src="./scripts/jogo/scene.js"></script>
     <script src="./scripts/jogo/character.js"></script>
     <script src="./scripts/jogo/inimigo.js"></script>
-
-
-
-  </head>
-  <body></body>
+    <script src="./scripts/jogo/pontuacao.js"></script>
+    <script src="./sketch.js"></script>
+  </body>
 </html>
